apps/ghost/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: ghost
  labels:
    app: ghost
    app.kubernetes.io/name: ghost
    app.kubernetes.io/instance: ghost
    app.kubernetes.io/version: "5.8"
    app.kubernetes.io/component: ghost
    app.kubernetes.io/part-of: ghost

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      namespace: ghost
      labels:
        app: ghost
    spec:
      automountServiceAccountToken: false # Disable automounting of service account token
      volumes:
        - name: ghost-content
          persistentVolumeClaim:
            claimName: ghost-content-pvc

        - name: ghost-config-prod
          secret:
            secretName: ghost-config-prod
            defaultMode: 420

        - name: tmp
          emptyDir:
            sizeLimit: 64Mi

      containers:
        - name: debug
          image: busybox
          volumeMounts:
            - name: ghost-content
              mountPath: /home/nonroot/app/ghost/content
              readOnly: false
            - name: ghost-config-prod
              readOnly: true
              mountPath: /home/nonroot/app/ghost/config.production.json
              subPath: config.production.json
            - name: tmp # This is the temporary volume mount to allow loading themes
              mountPath: /tmp
              readOnly: false
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 65532

        - name: ghost
          image: ghcr.io/sredevopsorg/ghost-on-kubernetes:main
          imagePullPolicy: Always
          ports:
            - name: ghost
              containerPort: 2368
              protocol: TCP

          # You should uncomment the following lines in production. Change the values according to your environment.

          readinessProbe:
            httpGet:
              path: /ghost/api/v4/admin/site/
              port: ghk8s
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
                - name: Host
                  value: rookian.dev
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
            initialDelaySeconds: 10

          livenessProbe:
            httpGet:
              path: /ghost/api/v4/admin/site/
              port: ghk8s
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
                - name: Host
                  value: rookian.dev
            periodSeconds: 3600
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 1
            initialDelaySeconds: 60

          resources:
            limits:
              cpu: 800m
              memory: 800Mi
            requests:
              cpu: 100m
              memory: 200Mi

          volumeMounts:
            - name: ghost-content
              mountPath: /home/nonroot/app/ghost/content
              readOnly: false
            - name: ghost-config-prod
              readOnly: true
              mountPath: /home/nonroot/app/ghost/config.production.json
              subPath: config.production.json
            - name: tmp # This is the temporary volume mount to allow loading themes
              mountPath: /tmp
              readOnly: false
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 65532

      restartPolicy: Always
      terminationGracePeriodSeconds: 15
      dnsPolicy: ClusterFirst
      # Optional: Uncomment the following to specify node selectors
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: static
      #               operator: In
      #               values:
      #                 - "true"

      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  revisionHistoryLimit: 3
  progressDeadlineSeconds: 600
