apps/ghost/mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-ghost
  namespace: ghost
  labels:
    app: mysql-ghost
    app.kubernetes.io/name: mysql-ghost
    app.kubernetes.io/instance: ghost
    app.kubernetes.io/version: "5.8"
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: ghost
spec:
  serviceName: service-mysql-ghost
  replicas: 1
  selector:
    matchLabels:
      app: mysql-ghost
  template:
    metadata:
      labels:
        app: mysql-ghost
      # annotations:
      #   container.apparmor.security.beta.kubernetes.io/mysql-ghost: runtime/default
    spec:
      containers:
      - name: mysql-ghost
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 999

        image: docker.io/mysql:8.2
        imagePullPolicy: IfNotPresent # You can change this value according to your needs
        resources:
          requests:
            memory: 500Mi # You can change this value according to your needs
            cpu: 400m # You can change this value according to your needs
          limits:
            memory: 1Gi # You can change this value according to your needs
            cpu: 900m # You can change this value according to your needs
        ports:
        - containerPort: 3306
          protocol: TCP
          name: mysql-ghost
        volumeMounts:
        - name: mysql-ghost-volume
          mountPath: /var/lib/mysql
          subPath: mysql-empty-subdir
          readOnly: false

        - name: mysql-ghost-tmp
          mountPath: /tmp
          readOnly: false

        - name: mysql-ghost-socket
          mountPath: /var/run/mysqld
          readOnly: false

      automountServiceAccountToken: false

      # Optional: Uncomment the following to specify node selectors
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: static
      #               operator: In
      #               values:
      #                 - "true"

      # securityContext:
      #   seccompProfile:
      #     type: RuntimeDefault

      volumes:
      - name: mysql-ghost-volume
        persistentVolumeClaim:
          claimName: mysql-ghost-pvc
      - name: mysql-ghost-tmp
        emptyDir:
          sizeLimit: 128Mi
      - name: mysql-ghost-socket
        emptyDir:
          sizeLimit: 128Mi
