apps/ghost/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-ghost
  namespace: ghost
  labels:
    app: ghost
    app.kubernetes.io/name: ghost
    app.kubernetes.io/instance: ghost
    app.kubernetes.io/version: "5.8"
    app.kubernetes.io/component: service-ghost
    app.kubernetes.io/part-of: ghost

spec:
  ports:
  - port: 2368
    protocol: TCP
    targetPort: 2368
    name: ghost
  selector:
    app: ghost

---
apiVersion: v1
kind: Service
metadata:
  name: service-mysql-ghost
  namespace: ghost
  labels:
    app: mysql-ghost
    app.kubernetes.io/name: mysql-ghost
    app.kubernetes.io/instance: ghost
    app.kubernetes.io/version: "5.8"
    app.kubernetes.io/component: service-db
    app.kubernetes.io/part-of: ghost
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
    name: mysql-ghost
  selector:
    app: mysql-ghost
